# ReversiConsole

./: .gitignore  Brett.cpp  Brett.h  CMakeLists.txt  Computer.cpp  Computer.h  GameMaster.cpp  GameMaster.h  Hausarbeit Informatik 1 - Reversi.sln  Hausarbeit Informatik 1 - Reversi.vcxproj  Hausarbeit Informatik 1 - Reversi.vcxproj.filters  LogFile.cpp  LogFile.h  README.md  Reversi.lnk  log.txt  main.cpp
include/: Board.h  Board.hpp  Computer.h  Computer.hpp  Controller.h  DefaultBoards.h  DefaultBoards.hpp  GameMaster.h  Interface.h  Interface.hpp  LogFile.h  Logger.h  TestBoards.h
src/: Board.cpp  Computer.cpp  Controller.cpp  GameMaster.cpp  Interface.cpp  LogFile.cpp  Logger.cpp  main.cpp
